service/tornado/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tornado
  namespace: dev
  labels:
    app: tornado
    service: tornado
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8888
  selector:
    app: tornado
